--- a/src/plugins/export/theoraplugin/CMakeLists.txt
+++ b/src/plugins/export/theoraplugin/CMakeLists.txt
@@ -3,11 +3,13 @@ set(TUPITHEORAPLUGIN_HEADERS
     theoraplugin.h)
 
 set(TUPITHEORAPLUGIN_SOURCES
-    theoramoviegenerator.cpp)
-###    theoraplugin.cpp)
+    theoramoviegenerator.cpp
+    theoraplugin.cpp)
 
 add_library(tupitheoraplugin MODULE ${TUPITHEORAPLUGIN_SOURCES})
 target_link_libraries(tupitheoraplugin tupifwcore tupibase)
+
+set_property(TARGET tupitheoraplugin APPEND PROPERTY AUTOGEN_TARGET_DEPENDS "theoraplugin.json")
 
 install(TARGETS tupitheoraplugin DESTINATION ${TUPITUBE_PLUGIN})
 
