--- a/src/shell/CMakeLists.txt
+++ b/src/shell/CMakeLists.txt
@@ -6,9 +6,6 @@ set(SHELL_HEADERS
     tuplocalprojectmanagerhandler.h
     tupmainwindow.h)
 
-### check again if things can be done this way
-###set(SHELL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
-
 set(SHELL_SOURCES
     tupsigndialog.cpp
     tupstatusbar.cpp
@@ -35,16 +32,23 @@ target_link_libraries(tupitube.desk tupifwgui tupistore tupiworkspace tupiplayer
 
 if(UNIX AND NOT APPLE)
   install(DIRECTORY data DESTINATION ${TUPITUBE_SHARE})
-# install launcher here, but we'll have to configure it first
-  install(PROGRAMS ../../tools/linux/tupitube.desk DESTINATION ${CMAKE_INSTALL_BINDIR})
-  install(FILES ../../launcher/tupitube.xml DESTINATION ${CMAKE_INSTALL_DATADIR}/mime/packages)
-# this has to be created first!
-#  install(FILES ../../launcher/tupitube.desktop ${CMAKE_INSTALL_DATADIR}/applications)
+  configure_file(${CMAKE_SOURCE_DIR}/tools/linux/tupitube.desk.in
+    ${CMAKE_CURRENT_BINARY_DIR}/tupitube.desk)
+  install(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/tupitube.desk
+    DESTINATION ${CMAKE_INSTALL_BINDIR})
+  install(FILES ${CMAKE_SOURCE_DIR}/launcher/tupitube.xml
+    DESTINATION ${CMAKE_INSTALL_DATADIR}/mime/packages)
+  configure_file(${CMAKE_SOURCE_DIR}/launcher/tupitube.desktop.in
+    ${CMAKE_CURRENT_BINARY_DIR}/tupitube.desktop)
+  install(FILES ${CMAKE_CURRENT_BINARY_DIR}/tupitube.desktop
+    DESTINATION ${CMAKE_INSTALL_DATADIR}/applications)
 # consider using the svg icon here
-  install(FILES ../../launcher/icons/tupitube.desk.png DESTINATION ${CMAKE_INSTALL_DATADIR}/pixmaps)
+  install(FILES ${CMAKE_SOURCE_DIR}/launcher/icons/tupitube.desk.png
+    DESTINATION ${CMAKE_INSTALL_DATADIR}/pixmaps)
   install(DIRECTORY html DESTINATION ${TUPITUBE_SHARE}/data)
 # might have to set a customizable license path
   install(FILES man/copyright DESTINATION ${CMAKE_INSTALL_DATADIR}/doc/tupitube)
 # should this be called tupitube.bin instead?
-  install(TARGETS tupitube.desk DESTINATION ${CMAKE_INSTALL_BINDIR})
+  install(TARGETS tupitube.desk RENAME tupitube.bin
+    DESTINATION ${CMAKE_INSTALL_BINDIR})
 endif()
